<resources>
    <string name="app_name">Calculadora Ohm Imc EcCuad</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Culculadora Específica</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_cuadEcuation">Calculadora de Ecuaciones Cuadráticas</string>
    <string name="menu_ohmLaw">Calculadora de ley de Ohm</string>
    <string name="menu_bmi">Calculadora IMC</string>

    <!-- home view -->
    <string name="welcome">Bienvenid@ a la calculadora de Ley de Ohm, IMC y Ecuaciones Cuadráticas.</string>
    <string name="welcome_message">Pincha en una de las imágenes o en el menú de la esquina superior derecha para acceder a cualquiera de las calculadoras.</string>
    <!-- bmi view -->.
    <string name="hint_weight_input">Ingrese el peso</string>
    <string name="hint_height_input">Ingrese la altura en metros (m.cc)</string>
    <string name="hint_result">Resultado</string>

    <!-- ohm's law -->
    <string name="hint_voltage_input">Voltaje</string>
    <string name="hint_resistance_input">Resistencia</string>
    <string name="hint_current_input">Corriente</string>
    <string name="hint_power_input">Potencia</string>

    <!-- quadratic equation -->
    <string name="hint_a_input">a</string>
    <string name="hint_b_input">b</string>
    <string name="hint_c_input">c</string>
    <string name="hint_x2_input">xˆ2</string>
    <string name="hint_x_input">x</string>


    <string name="btn_global_calculate">Calcular</string>

    <!-- colors -->
    <color name="bckg_header_title">#b56cf5</color>
</resources>