<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cuadratic_equation"
            android:icon="@drawable/ic_calculate_24"
            android:title="@string/menu_cuadEcuation" />
        <item
            android:id="@+id/nav_ohmslaw"
            android:icon="@drawable/ic_ohm_24"
            android:title="@string/menu_ohmLaw" />
        <item
            android:id="@+id/nav_bmi"
            android:icon="@drawable/ic_bmi24"
            android:title="@string/menu_bmi" />
    </group>
</menu>