<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.calculadoraohmimceccuad.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_cuadratic_equation"
        android:name="com.example.calculadoraohmimceccuad.ui.quadraticEquation.QuadraticEquationFragment"
        android:label="@string/menu_cuadEcuation"
        tools:layout="@layout/fragment_quadratic_equation" />

    <fragment
        android:id="@+id/nav_ohmslaw"
        android:name="com.example.calculadoraohmimceccuad.ui.ohmslaw.OhmsLawFragment"
        android:label="@string/menu_ohmLaw"
        tools:layout="@layout/fragment_ohmslaw" />
    <fragment
        android:id="@+id/nav_bmi"
        android:name="com.example.calculadoraohmimceccuad.ui.bmi.BodyMassIndexFragment"
        android:label="@string/menu_bmi"
        tools:layout="@layout/fragment_body_mass_index" />
</navigation>