<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ohmslaw.OhmsLawFragment">

    <Spinner
        android:id="@+id/spinner_ohmslaw"
        android:layout_width="326dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_voltage_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794" />

    <EditText
        android:id="@+id/txt_voltage_input"
        android:layout_width="326dp"
        android:layout_height="60dp"
        android:digits="0123456789.,"
        android:ems="10"
        android:hint="@string/hint_voltage_input"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <EditText
        android:id="@+id/txt_current_input"
        android:layout_width="326dp"
        android:layout_height="60dp"
        android:digits="0123456789.,"
        android:ems="10"
        android:hint="@string/hint_current_input"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602" />

    <EditText
        android:id="@+id/txt_resistance_input"
        android:layout_width="326dp"
        android:layout_height="60dp"
        android:digits="0123456789.,"
        android:ems="10"
        android:hint="@string/hint_resistance_input"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.478" />

    <Button
        android:id="@+id/btn_calc_ohmslaw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_global_calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.789" />

</androidx.constraintlayout.widget.ConstraintLayout>