<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bmi.BodyMassIndexFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:src="@drawable/imc"
        app:layout_constraintBottom_toTopOf="@+id/txt_weight_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_weight_input"
        android:layout_width="326dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/hint_weight_input"
        android:inputType="numberDecimal"
        android:digits="0123456789.,"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199" />


    <EditText
        android:id="@+id/txt_height_input"
        android:layout_width="326dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/hint_height_input"
        android:inputType="numberDecimal"
        android:digits="0123456789.,"
        app:layout_constraintBottom_toTopOf="@+id/btn_clc_bmi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_weight_input"
        app:layout_constraintVertical_bias="0.052" />

    <EditText
        android:id="@+id/txt_bmi_result"
        android:layout_width="326dp"
        android:layout_height="60dp"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/hint_result"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_clc_bmi"
        app:layout_constraintVertical_bias="0.226" />


    <Button
        android:id="@+id/btn_clc_bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_global_calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.486" />

</androidx.constraintlayout.widget.ConstraintLayout>